2005-08-03  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add gnomemeeting (opal branch).

2005-08-02  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added gdm2.

2005-07-29  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py (stats_as_html): Improve rendering.

2005-07-27  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added zenity, sound-juicer.

2005-07-24  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Added applets, evince.

2005-07-20  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add more modules.

2005-07-19  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py: Clean-ups and fixes.

2005-07-18  Danilo Šegan  <danilo@gnome.org>

	* modules.xml: Add panel-clock-applet, panel-fish-applet,
	panel-window-list-applet, panel-workspace-switcher-applet. 

	* doc-l10n-status.py (stats_as_html): Move <hr>.

2005-07-18  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py: move cvsroot to l10n_config.py
	* l10n_config.py (cvsroot): add cvsroot, switch	to anoncvs from my
	own account.

2005-07-18  Danilo Šegan  <danilo@gnome.org>

	* doc-l10n-status.py, l10n_config.py, modules.xml: Initial import.