@@ -132,4 +132,8 @@
     <cvs-branch>opal</cvs-branch>
   </module>
 
+  <module id="fast-user-switch-applet">
+    <cvs-directory>fast-user-switch-applet/help</cvs-directory>
+  </module>
+
 </gnomedocs>
