@@ -1,3 +1,7 @@
+2005-08-04  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.xml: Add fast-user-switch-applet.
+
 2005-08-03  Danilo Šegan  <danilo@gnome.org>
 
 	* modules.xml: Add gnomemeeting (opal branch).
